--- a/css/style-book-detail.css
+++ b/css/style-book-detail.css
@@ -235,11 +235,10 @@ section#section-detail-book div#container-detail-book #item-detail-book-right fo
 }
 section#section-detail-book div#container-detail-book #item-detail-book-right form.like-main-pict input.heart-wishlist {
   position: absolute;
-  top: -60px;
-  right: 0px;
+  top: 10px;
+  right: 10px;
 }
 section#section-detail-book div#container-detail-book #item-detail-book-right form.like-main-pict input.input-heart {
-  background-image: url("../img/picto/heart-rounded.svg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -251,6 +250,9 @@ section#section-detail-book div#container-detail-book #item-detail-book-right fo
 }
 section#section-detail-book div#container-detail-book #item-detail-book-right form.like-main-pict input.input-heart:hover {
   background-image: url("../img/picto/heart-rounded-full-blue.svg");
+}
+section#section-detail-book div#container-detail-book #item-detail-book-right form.like-main-pict input.input-fill-blue {
+  background-image: url("../img/picto/heart-rounded.svg");
 }
 section#section-detail-book div#container-detail-book #item-detail-book-right form.like-main-pict input.input-heart-red {
   background-image: url("../img/picto/heart-rounded-full-red.svg");
