--- a/css/style.scss
+++ b/css/style.scss
@@ -31,7 +31,6 @@ $bgModal: rgba(6, 13, 30, 0.5);
 body {
   font-family: "Hind Madurai", sans-serif;
   background-color: #fafafb;
-  width: 100vw;
 
   div.bloc-modale {
     position: fixed;
@@ -63,7 +62,7 @@ h2 {
   font-family: "Nova Slim", sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 32px;
+  font-size: 40px;
   line-height: 38px;
   text-align: center;
   letter-spacing: 0.04em;
@@ -77,7 +76,7 @@ h2 {
 }
 
 p#sub-title {
-  font-size: 14px;
+  font-size: 20px;
   text-align: start;
   margin: 30px auto;
   font-weight: bold;
@@ -92,7 +91,7 @@ p#sub-title {
 }
 
 p.sub-title-section {
-  font-size: 14px;
+  font-size: 20px;
   text-align: start;
   margin: 30px auto;
   font-weight: bold;
@@ -439,11 +438,22 @@ p.sub-title-section {
 
 #section-news {
   width: 100%;
+  height: fit-content;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
   background: #0868ae;
-  padding: 120px 50px 0 50px;
+  padding: 40px 90px 80px 50px;
+
+  @media screen and (min-width: 650px) {
+    padding: 40px 90px 80px 50px;
+  }
+
+  @media screen and (min-width: 950px) {
+    padding: 120px 90px 80px 50px;
+  }
 
   #container-section-news {
+    width: 100%;
+    margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -454,10 +464,16 @@ p.sub-title-section {
 
     #item-section-news-left {
       position: relative;
+      @media screen and (min-width: 950px) {
+        width: 100%;
+      }
+      
+
       h1 {
         white-space: nowrap;
         color: #f9b017;
         font-size: 40px;
+        line-height: 50px;
         z-index: 1;
 
         @media screen and (min-width: 650px) {
@@ -466,35 +482,32 @@ p.sub-title-section {
           margin-bottom: 0px;
         }
 
-        @media screen and (min-width: 950px) {
-          font-size: 40px;
-          margin-top: 50px;
-          margin-bottom: 0px;
-        }
+        // @media screen and (min-width: 950px) {
+        //   font-size: 40px;
+        //   margin-top: 50px;
+        //   margin-bottom: 0px;
+        // }
 
         @media screen and (min-width: 1350px) {
           font-size: 70px;
+          line-height: 80px;
         }
       }
 
       p#sub-title {
-        padding: 15px;
         line-height: 30px;
         font-size: 20px;
         color: $white;
         z-index: 1;
         width: 450px;
+        white-space: nowrap;
+        margin-left: 40px;
+
 
         @media screen and (min-width: 650px) {
           line-height: 35px;
           font-size: 25px;
           width: 600px;
-        }
-
-        @media screen and (min-width: 950px) {
-          margin-bottom: 50px;
-          font-size: 20px;
-          width: 500px;
         }
 
         @media screen and (min-width: 1350px) {
@@ -513,6 +526,7 @@ p.sub-title-section {
         letter-spacing: 1px;
         border-radius: 8px;
         transition: all 0.35s;
+        margin-left: 40px;
 
         &:hover {
           background: $btn-red-hover;
@@ -529,8 +543,10 @@ p.sub-title-section {
       width: 100%;
       text-align: center;
       padding-top: 50px;
+      display: none;
 
-      @media screen and (min-width: 950px) {
+      @media screen and (min-width: 1280px) {
+        display: block;
         width: 50%;
       }
 
@@ -700,18 +716,24 @@ p.sub-title-section {
 
 #section-heart {
   width: 100%;
-  padding-top: 120px;
+  margin: 0 auto;
+  padding-top: 80px;
   padding-bottom: 60px;
   overflow: hidden;
+
+  @media screen and (min-width: 950px) {
+    padding-top: 120px;
+  }
 
   p#sub-title-heart {
     margin-top: 10px;
     margin-bottom: 60px;
+    text-align: center;
   }
 
   ul.top {
     text-align: center;
-    margin-top: 40px;
+    margin-top: 200px;
     list-style-type: none;
 
     @media screen and (min-width: 950px) {
@@ -721,25 +743,33 @@ p.sub-title-section {
     }
 
     li {
-      margin-bottom: 60px;
+      padding: 60px;
 
-      @media screen and (min-width: 950px) {
-        width: 33%;
+      @media screen and (min-width: 650px) {
+        width: 49%;
         margin-right: -100px;
         margin-left: -30px;
         padding: 0;
         transition: all 0.5s ease;
       }
 
-      &:hover {
-        @media screen and (min-width: 950px) {
-          transform: translateY(-50px);
-        }
+      @media screen and (min-width: 950px) {
+        width: 25%;
+        padding: 0;
+        transition: all 0.5s ease;
       }
+
+      // @media screen and (min-width: 950px) {
+      //   margin-right: 0px;
+      //   padding: 0;
+      //   transition: all 0.5s ease;
+      // }
+
     }
 
     .animated-card {
       position: relative;
+      left: 0;
       opacity: 0;
     }
 
@@ -764,7 +794,7 @@ p.sub-title-section {
     a {
       color: #ff6b38;
       position: relative;
-      left: -10%;
+      left: -15%;
       top: 0;
 
       @media screen and (min-width: 950px) {
