--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ h2 {
   }
 }
 
-p#sub-title {
++ p.sub-title-section {
   font-size: 20px;
   text-align: start;
   margin: 30px auto;
@@ -76,23 +76,7 @@ p#sub-title {
   display: block;
 }
 @media screen and (min-width: 950px) {
-  p#sub-title {
-    font-size: 18px;
-    line-height: 30px;
-  }
-}
-
-p.sub-title-section {
-  font-size: 20px;
-  text-align: start;
-  margin: 30px auto;
-  font-weight: bold;
-  line-height: 24px;
-  color: #070606;
-  display: block;
-}
-@media screen and (min-width: 950px) {
-  p.sub-title-section {
+  + p.sub-title-section {
     font-size: 22px;
     line-height: 30px;
     text-align: center;
@@ -214,12 +198,22 @@ p.sub-title-section {
   cursor: pointer;
 }
 #main-header #main-nav-bar #container-nav-bar #container-group-logo a.link-page-home img {
-  width: 85px;
+  width: 65px;
+}
+@media screen and (min-width: 500px) {
+  #main-header #main-nav-bar #container-nav-bar #container-group-logo a.link-page-home img {
+    width: 85px;
+  }
 }
 #main-header #main-nav-bar #container-nav-bar #container-group-logo a.link-page-home #nav-logo-text {
   font-family: "Risque", cursive, sans-serif;
-  font-size: 36px;
+  font-size: 26px;
   color: #fff;
+}
+@media screen and (min-width: 500px) {
+  #main-header #main-nav-bar #container-nav-bar #container-group-logo a.link-page-home #nav-logo-text {
+    font-size: 36px;
+  }
 }
 #main-header #main-nav-bar #container-nav-bar #container-group-search-nav-top {
   position: relative;
@@ -329,13 +323,25 @@ p.sub-title-section {
   }
 }
 #main-header #main-nav-bar #container-nav-bar #container-group-btn-connexion div#container-box-index-logout a#btn-index-session img {
+  width: 38px;
   line-height: 72px;
+}
+@media screen and (min-width: 500px) {
+  #main-header #main-nav-bar #container-nav-bar #container-group-btn-connexion div#container-box-index-logout a#btn-index-session img {
+    width: 50px;
+  }
+}
+@media screen and (min-width: 950px) {
+  #main-header #main-nav-bar #container-nav-bar #container-group-btn-connexion div#container-box-index-logout a#btn-index-session img {
+    width: 50px;
+    margin-top: 4px;
+  }
 }
 #main-header #main-nav-bar #container-nav-bar #container-group-btn-connexion div#container-box-index-logout div#box-index-logout {
   z-index: 999;
   position: absolute;
   top: 42px;
-  right: 74px;
+  right: 0px;
   width: 220px;
   height: 160px;
   background-color: #fff;
@@ -343,18 +349,33 @@ p.sub-title-section {
   padding: 10px 20px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
+@media screen and (min-width: 500px) {
+  #main-header #main-nav-bar #container-nav-bar #container-group-btn-connexion div#container-box-index-logout div#box-index-logout {
+    top: 55px;
+  }
+}
+@media screen and (min-width: 950px) {
+  #main-header #main-nav-bar #container-nav-bar #container-group-btn-connexion div#container-box-index-logout div#box-index-logout {
+    top: 70px;
+  }
+}
 #main-header #main-nav-bar #container-nav-bar #container-group-btn-connexion div#container-box-index-logout div#box-index-logout::after {
   position: absolute;
   display: block;
   content: "";
-  top: -10px;
-  left: 50%;
+  top: -8px;
+  left: 88%;
   margin-left: -8px;
   width: 0;
   height: 0;
   border-color: transparent transparent #fff;
   border-style: solid;
   border-width: 0 1pc 1pc;
+}
+@media screen and (min-width: 500px) {
+  #main-header #main-nav-bar #container-nav-bar #container-group-btn-connexion div#container-box-index-logout div#box-index-logout::after {
+    left: 86%;
+  }
 }
 #main-header #main-nav-bar #container-nav-bar #container-group-btn-connexion div#container-box-index-logout div#box-index-logout ul li {
   margin-top: 10px;
@@ -387,89 +408,107 @@ p.sub-title-section {
   color: #043a61;
 }
 
-#section-news {
+section#section-news {
   width: 100%;
   height: -moz-fit-content;
   height: fit-content;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
   background: #0868ae;
-  padding: 40px 90px 80px 50px;
+  padding-top: 40px;
+  padding-bottom: 40px;
 }
-@media screen and (min-width: 650px) {
-  #section-news {
-    padding: 40px 90px 80px 50px;
+@media screen and (min-width: 1280px) {
+  section#section-news {
+    padding-top: 80px;
   }
 }
-@media screen and (min-width: 950px) {
-  #section-news {
-    padding: 120px 90px 80px 50px;
-  }
-}
-#section-news #container-section-news {
-  width: 100%;
+section#section-news div#container-section-news {
+  width: 90%;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  overflow: hidden;
 }
 @media screen and (min-width: 950px) {
-  #section-news #container-section-news {
+  section#section-news div#container-section-news {
     flex-wrap: nowrap;
   }
 }
-#section-news #container-section-news #item-section-news-left {
-  position: relative;
+section#section-news div#container-section-news #item-section-news-left {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 @media screen and (min-width: 950px) {
-  #section-news #container-section-news #item-section-news-left {
-    width: 100%;
+  section#section-news div#container-section-news #item-section-news-left {
+    padding-top: 60px;
+    width: 90%;
+    margin: 0 auto;
   }
 }
-#section-news #container-section-news #item-section-news-left h1 {
+section#section-news div#container-section-news #item-section-news-left h1 {
   white-space: nowrap;
   color: #f9b017;
-  font-size: 40px;
-  line-height: 50px;
+  font-size: 25px;
+  line-height: 30px;
   z-index: 1;
 }
+@media screen and (min-width: 500px) {
+  section#section-news div#container-section-news #item-section-news-left h1 {
+    font-size: 40px;
+    line-height: 50px;
+  }
+}
 @media screen and (min-width: 650px) {
-  #section-news #container-section-news #item-section-news-left h1 {
+  section#section-news div#container-section-news #item-section-news-left h1 {
     font-size: 55px;
     line-height: 65px;
     margin-bottom: 0px;
   }
 }
 @media screen and (min-width: 1350px) {
-  #section-news #container-section-news #item-section-news-left h1 {
+  section#section-news div#container-section-news #item-section-news-left h1 {
     font-size: 70px;
     line-height: 80px;
   }
 }
-#section-news #container-section-news #item-section-news-left p#sub-title {
-  line-height: 30px;
-  font-size: 20px;
+section#section-news div#container-section-news #item-section-news-left p#sub-title {
+  margin-top: 25px;
+  margin-bottom: 20px;
+  line-height: 24px;
+  font-size: 14px;
+  font-weight: bold;
   color: #fff;
-  z-index: 1;
-  width: 450px;
-  white-space: nowrap;
-  margin-left: 40px;
+  text-align: center;
+}
+@media screen and (min-width: 500px) {
+  section#section-news div#container-section-news #item-section-news-left p#sub-title {
+    font-size: 16px;
+  }
 }
 @media screen and (min-width: 650px) {
-  #section-news #container-section-news #item-section-news-left p#sub-title {
+  section#section-news div#container-section-news #item-section-news-left p#sub-title {
     line-height: 35px;
     font-size: 25px;
     width: 600px;
   }
 }
+@media screen and (min-width: 1280px) {
+  section#section-news div#container-section-news #item-section-news-left p#sub-title {
+    margin-top: 40px;
+    margin-bottom: 30px;
+  }
+}
 @media screen and (min-width: 1350px) {
-  #section-news #container-section-news #item-section-news-left p#sub-title {
+  section#section-news div#container-section-news #item-section-news-left p#sub-title {
     font-size: 30px;
     width: 100%;
   }
 }
-#section-news #container-section-news #item-section-news-left a#btn-join-reader {
+section#section-news div#container-section-news #item-section-news-left a#btn-join-reader {
   padding: 12px 24px;
-  line-height: 50px;
   font-weight: bold;
   text-decoration: none;
   background: #ff5e38;
@@ -477,56 +516,55 @@ p.sub-title-section {
   letter-spacing: 1px;
   border-radius: 8px;
   transition: all 0.35s;
-  margin-left: 40px;
 }
-#section-news #container-section-news #item-section-news-left a#btn-join-reader:hover {
+section#section-news div#container-section-news #item-section-news-left a#btn-join-reader:hover {
   background: #b53928;
   color: #fff;
 }
 @media screen and (min-width: 950px) {
-  #section-news #container-section-news #item-section-news-left {
+  section#section-news div#container-section-news #item-section-news-left {
     width: 50%;
   }
 }
-#section-news #container-section-news #item-section-news-right {
+section#section-news div#container-section-news #item-section-news-right {
   width: 100%;
   text-align: center;
   padding-top: 50px;
   display: none;
 }
 @media screen and (min-width: 1280px) {
-  #section-news #container-section-news #item-section-news-right {
+  section#section-news div#container-section-news #item-section-news-right {
     display: block;
     width: 50%;
   }
 }
-#section-news #container-section-news #item-section-news-right #item-news-right-top {
+section#section-news div#container-section-news #item-section-news-right #item-news-right-top {
   display: flex;
   justify-content: center;
   align-items: baseline;
 }
-#section-news #container-section-news #item-section-news-right #item-news-right-top img:first-of-type {
+section#section-news div#container-section-news #item-section-news-right #item-news-right-top img:first-of-type {
   margin-right: 15px;
   margin-bottom: 10px;
 }
-#section-news #container-section-news #item-section-news-right #item-news-right-bottom {
+section#section-news div#container-section-news #item-section-news-right #item-news-right-bottom {
   display: flex;
   justify-content: center;
 }
-#section-news .flip {
+section#section-news .flip {
   position: relative;
 }
-#section-news .flip > .front,
-#section-news .flip > .back {
+section#section-news .flip > .front,
+section#section-news .flip > .back {
   display: block;
   transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
   transition-duration: 2.5s;
   transition-property: transform, opacity;
 }
-#section-news .flip > .front {
+section#section-news .flip > .front {
   transform: rotateY(0deg);
 }
-#section-news .flip > .back {
+section#section-news .flip > .back {
   position: absolute;
   opacity: 0;
   top: 0px;
@@ -535,30 +573,30 @@ p.sub-title-section {
   height: 100%;
   transform: rotateY(-180deg);
 }
-#section-news .flip:hover > .front {
+section#section-news .flip:hover > .front {
   transform: rotateY(180deg);
 }
-#section-news .flip:hover > .back {
+section#section-news .flip:hover > .back {
   opacity: 1;
   transform: rotateY(0deg);
 }
-#section-news .flip.flip-vertical > .back {
+section#section-news .flip.flip-vertical > .back {
   transform: rotateX(-180deg);
 }
-#section-news .flip.flip-vertical:hover > .front {
+section#section-news .flip.flip-vertical:hover > .front {
   transform: rotateX(180deg);
 }
-#section-news .flip.flip-vertical:hover > .back {
+section#section-news .flip.flip-vertical:hover > .back {
   transform: rotateX(0deg);
 }
-#section-news .flip.auto-flip > .front, #section-news .flip.manual-flip > .front {
+section#section-news .flip.auto-flip > .front, section#section-news .flip.manual-flip > .front {
   transform: rotateY(180deg);
 }
-#section-news .flip.auto-flip > .back, #section-news .flip.manual-flip > .back {
+section#section-news .flip.auto-flip > .back, section#section-news .flip.manual-flip > .back {
   opacity: 1;
   transform: rotateY(0deg);
 }
-#section-news .flip {
+section#section-news .flip {
   position: relative;
   display: inline-block;
   margin-right: 1em;
@@ -566,12 +604,12 @@ p.sub-title-section {
   width: 150px;
 }
 @media screen and (min-width: 1430px) {
-  #section-news .flip {
+  section#section-news .flip {
     width: 200px;
   }
 }
-#section-news .flip > .front,
-#section-news .flip > .back {
+section#section-news .flip > .front,
+section#section-news .flip > .back {
   display: block;
   color: #fff;
   width: inherit;
@@ -581,45 +619,45 @@ p.sub-title-section {
   background: #ff5e38;
   border-radius: 8px;
 }
-#section-news .flip > .front p,
-#section-news .flip > .back p {
+section#section-news .flip > .front p,
+section#section-news .flip > .back p {
   font-size: 0.9125rem;
   line-height: 160%;
   color: #fff;
   text-align: start;
 }
-#section-news .flip > .front p span,
-#section-news .flip > .back p span {
+section#section-news .flip > .front p span,
+section#section-news .flip > .back p span {
   font-weight: bold;
 }
-#section-news .flip > .front-item-1 {
+section#section-news .flip > .front-item-1 {
   height: 240px;
 }
-#section-news .flip > .front-item-2 {
+section#section-news .flip > .front-item-2 {
   height: 180px;
 }
-#section-news .flip > .front-item-3 {
+section#section-news .flip > .front-item-3 {
   height: 240px;
 }
-#section-news .flip > .front-item-4 {
+section#section-news .flip > .front-item-4 {
   height: 180px;
   display: none;
 }
 @media screen and (min-width: 950px) {
-  #section-news .flip > .front-item-4 {
+  section#section-news .flip > .front-item-4 {
     display: block;
   }
 }
-#section-news .flip > .front-item-5 {
+section#section-news .flip > .front-item-5 {
   height: 180px;
   display: none;
 }
 @media screen and (min-width: 950px) {
-  #section-news .flip > .front-item-5 {
+  section#section-news .flip > .front-item-5 {
     display: block;
   }
 }
-#section-news .text-shadow {
+section#section-news .text-shadow {
   text-shadow: 1px 1px rgba(0, 0, 0, 0.04), 2px 2px rgba(0, 0, 0, 0.04), 3px 3px rgba(0, 0, 0, 0.04), 4px 4px rgba(0, 0, 0, 0.04), 0.125rem 0.125rem rgba(0, 0, 0, 0.04), 6px 6px rgba(0, 0, 0, 0.04), 7px 7px rgba(0, 0, 0, 0.04), 8px 8px rgba(0, 0, 0, 0.04), 9px 9px rgba(0, 0, 0, 0.04), 0.3125rem 0.3125rem rgba(0, 0, 0, 0.04), 11px 11px rgba(0, 0, 0, 0.04), 12px 12px rgba(0, 0, 0, 0.04), 13px 13px rgba(0, 0, 0, 0.04), 14px 14px rgba(0, 0, 0, 0.04), 0.625rem 0.625rem rgba(0, 0, 0, 0.04), 16px 16px rgba(0, 0, 0, 0.04), 17px 17px rgba(0, 0, 0, 0.04), 18px 18px rgba(0, 0, 0, 0.04), 19px 19px rgba(0, 0, 0, 0.04), 1.25rem 1.25rem rgba(0, 0, 0, 0.04);
 }
 
@@ -642,7 +680,7 @@ p.sub-title-section {
 }
 #section-heart ul.top {
   text-align: center;
-  margin-top: 200px;
+  margin-top: 130px;
   list-style-type: none;
 }
 @media screen and (min-width: 950px) {
@@ -657,7 +695,7 @@ p.sub-title-section {
 }
 @media screen and (min-width: 650px) {
   #section-heart ul.top li {
-    width: 49%;
+    width: 100%;
     margin-right: -100px;
     margin-left: -30px;
     padding: 0;
