--- a/css/style.scss
+++ b/css/style.scss
@@ -74,23 +74,7 @@ h2 {
     line-height: 70px;
   }
 }
-
-p#sub-title {
-  font-size: 20px;
-  text-align: start;
-  margin: 30px auto;
-  font-weight: bold;
-  line-height: 24px;
-  color: $black;
-  display: block;
-
-  @media screen and (min-width: 950px) {
-    font-size: 18px;
-    line-height: 30px;
-  }
-}
-
-p.sub-title-section {
++ p.sub-title-section {
   font-size: 20px;
   text-align: start;
   margin: 30px auto;
@@ -237,13 +221,20 @@ p.sub-title-section {
           }
 
           img {
-            width: 85px;
+            width: 65px;
+            @media screen and (min-width: 500px) {
+              width: 85px;
+            }
           }
 
           #nav-logo-text {
             font-family: "Risque", cursive, sans-serif;
-            font-size: 36px;
+            font-size: 26px;
             color: $white;
+
+            @media screen and (min-width: 500px) {
+              font-size: 36px;
+            }
           }
         }
       }
@@ -361,7 +352,17 @@ p.sub-title-section {
         div#container-box-index-logout {
           a#btn-index-session {
             img {
+              width: 38px;
               line-height: 72px;
+
+              @media screen and (min-width: 500px) {
+                width: 50px;
+              }
+
+              @media screen and (min-width: 950px) {
+                width: 50px;
+                margin-top: 4px;
+              }
             }
           }
 
@@ -369,7 +370,7 @@ p.sub-title-section {
             z-index: 999;
             position: absolute;
             top: 42px;
-            right: 74px;
+            right: 0px;
             width: 220px;
             height: 160px;
             background-color: $white;
@@ -377,18 +378,30 @@ p.sub-title-section {
             padding: 10px 20px;
             box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
+            @media screen and (min-width: 500px) {
+              top: 55px;
+            }
+
+            @media screen and (min-width: 950px) {
+              top: 70px;
+            }
+
             &::after {
               position: absolute;
               display: block;
               content: "";
-              top: -10px;
-              left: 50%;
+              top: -8px;
+              left: 88%;
               margin-left: -8px;
               width: 0;
               height: 0;
               border-color: transparent transparent #fff;
               border-style: solid;
               border-width: 0 1pc 1pc;
+
+              @media screen and (min-width: 500px) {
+                left: 86%;
+              }
             }
 
             ul {
@@ -436,45 +449,52 @@ p.sub-title-section {
 
 // ---------- SECTION - NEWS ----------
 
-#section-news {
+section#section-news {
   width: 100%;
   height: fit-content;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
   background: #0868ae;
-  padding: 40px 90px 80px 50px;
+  padding-top: 40px;
+  padding-bottom: 40px;
 
-  @media screen and (min-width: 650px) {
-    padding: 40px 90px 80px 50px;
+  @media screen and (min-width: 1280px) {
+    padding-top: 80px;
   }
 
-  @media screen and (min-width: 950px) {
-    padding: 120px 90px 80px 50px;
-  }
-
-  #container-section-news {
-    width: 100%;
+  div#container-section-news {
+    width: 90%;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    overflow: hidden;
 
     @media screen and (min-width: 950px) {
       flex-wrap: nowrap;
     }
 
     #item-section-news-left {
-      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
       @media screen and (min-width: 950px) {
-        width: 100%;
+        padding-top: 60px;
+        width: 90%;
+        margin: 0 auto;
       }
-      
 
       h1 {
         white-space: nowrap;
         color: #f9b017;
-        font-size: 40px;
-        line-height: 50px;
+        font-size: 25px;
+        line-height: 30px;
         z-index: 1;
+
+        @media screen and (min-width: 500px) {
+          font-size: 40px;
+          line-height: 50px;
+        }
 
         @media screen and (min-width: 650px) {
           font-size: 55px;
@@ -495,14 +515,17 @@ p.sub-title-section {
       }
 
       p#sub-title {
-        line-height: 30px;
-        font-size: 20px;
+        margin-top: 25px;
+        margin-bottom: 20px;
+        line-height: 24px;
+        font-size: 14px;
+        font-weight: bold;
         color: $white;
-        z-index: 1;
-        width: 450px;
-        white-space: nowrap;
-        margin-left: 40px;
+        text-align: center;
 
+        @media screen and (min-width: 500px) {
+          font-size: 16px;
+        }
 
         @media screen and (min-width: 650px) {
           line-height: 35px;
@@ -510,6 +533,10 @@ p.sub-title-section {
           width: 600px;
         }
 
+        @media screen and (min-width: 1280px) {
+          margin-top: 40px;
+          margin-bottom: 30px;
+        }
         @media screen and (min-width: 1350px) {
           font-size: 30px;
           width: 100%;
@@ -518,7 +545,6 @@ p.sub-title-section {
 
       a#btn-join-reader {
         padding: 12px 24px;
-        line-height: 50px;
         font-weight: bold;
         text-decoration: none;
         background: $btn-red;
@@ -526,7 +552,6 @@ p.sub-title-section {
         letter-spacing: 1px;
         border-radius: 8px;
         transition: all 0.35s;
-        margin-left: 40px;
 
         &:hover {
           background: $btn-red-hover;
@@ -733,7 +758,7 @@ p.sub-title-section {
 
   ul.top {
     text-align: center;
-    margin-top: 200px;
+    margin-top: 130px;
     list-style-type: none;
 
     @media screen and (min-width: 950px) {
@@ -746,7 +771,7 @@ p.sub-title-section {
       padding: 60px;
 
       @media screen and (min-width: 650px) {
-        width: 49%;
+        width: 100%;
         margin-right: -100px;
         margin-left: -30px;
         padding: 0;
@@ -764,7 +789,6 @@ p.sub-title-section {
       //   padding: 0;
       //   transition: all 0.5s ease;
       // }
-
     }
 
     .animated-card {
@@ -944,7 +968,7 @@ p.sub-title-section {
       }
 
       input.input-fill-blue {
-        background-image: url('../img/picto/heart-rounded.svg');
+        background-image: url("../img/picto/heart-rounded.svg");
       }
 
       input.input-heart-red {
