--- a/css/style.css
+++ b/css/style.css
@@ -508,12 +508,10 @@ section#section-news div#container-section-news #item-section-news-left p#sub-ti
   }
 }
 section#section-news div#container-section-news #item-section-news-left a#btn-join-reader {
-  padding: 12px 24px;
+  padding: 12px 36px;
   font-weight: bold;
-  text-decoration: none;
   background: #ff5e38;
   color: #fff;
-  letter-spacing: 1px;
   border-radius: 8px;
   transition: all 0.35s;
 }
@@ -923,8 +921,10 @@ section#section-news .text-shadow {
 
 #section-cta-available {
   width: 100%;
-  height: 400px;
-  padding: 80px;
+  height: -moz-fit-content;
+  height: fit-content;
+  padding-top: 80px;
+  padding-bottom: 80px;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
   background-image: radial-gradient(circle at 19% 90%, rgba(190, 190, 190, 0.04) 0%, rgba(190, 190, 190, 0.04) 17%, transparent 17%, transparent 100%), radial-gradient(circle at 73% 2%, rgba(78, 78, 78, 0.04) 0%, rgba(78, 78, 78, 0.04) 94%, transparent 94%, transparent 100%), radial-gradient(circle at 45% 2%, rgba(18, 18, 18, 0.04) 0%, rgba(18, 18, 18, 0.04) 55%, transparent 55%, transparent 100%), radial-gradient(circle at 76% 60%, rgba(110, 110, 110, 0.04) 0%, rgba(110, 110, 110, 0.04) 34%, transparent 34%, transparent 100%), radial-gradient(circle at 68% 56%, rgba(246, 246, 246, 0.04) 0%, rgba(246, 246, 246, 0.04) 16%, transparent 16%, transparent 100%), radial-gradient(circle at 71% 42%, rgba(156, 156, 156, 0.04) 0%, rgba(156, 156, 156, 0.04) 47%, transparent 47%, transparent 100%), radial-gradient(circle at 46% 82%, rgba(247, 247, 247, 0.04) 0%, rgba(247, 247, 247, 0.04) 39%, transparent 39%, transparent 100%), radial-gradient(circle at 50% 47%, rgba(209, 209, 209, 0.04) 0%, rgba(209, 209, 209, 0.04) 45%, transparent 45%, transparent 100%), linear-gradient(90deg, rgb(8, 104, 174), rgb(5, 73, 123));
   background-position: center;
@@ -932,16 +932,40 @@ section#section-news .text-shadow {
   text-align: center;
 }
 #section-cta-available h2.title-cta {
-  font-size: 45px;
+  width: 90%;
+  margin: 0 auto;
+  font-size: 25px;
+  line-height: 35px;
   color: #fff;
 }
+@media screen and (min-width: 650px) {
+  #section-cta-available h2.title-cta {
+    font-size: 35px;
+  }
+}
+@media screen and (min-width: 1270px) {
+  #section-cta-available h2.title-cta {
+    font-size: 50px;
+  }
+}
 #section-cta-available p#sub-title-cta {
+  margin-top: 25px;
+  margin-bottom: 20px;
+  font-size: 14px;
+  font-weight: bold;
   color: #fff;
+}
+@media screen and (min-width: 650px) {
+  #section-cta-available p#sub-title-cta {
+    margin-top: 35px;
+    margin-bottom: 25px;
+    font-size: 20px;
+  }
 }
 #section-cta-available a {
   display: block;
   margin: 0 auto;
-  width: 250px;
+  width: 199px;
   padding: 12px 24px;
   background-color: #ff5e38;
   color: #fff;
@@ -1317,7 +1341,6 @@ section#section-news .text-shadow {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: baseline;
 }
 @media screen and (min-width: 950px) {
   #footer #container-footer-top #item-footer-left {
@@ -1328,9 +1351,14 @@ section#section-news .text-shadow {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   width: 100%;
   margin-left: -25px;
+}
+@media screen and (min-width: 950px) {
+  #footer #container-footer-top #item-footer-left div#container-group-logo-botom {
+    justify-content: flex-start;
+  }
 }
 #footer #container-footer-top #item-footer-left div#container-group-logo-botom a.link-page-home {
   display: flex;
@@ -1395,21 +1423,17 @@ section#section-news .text-shadow {
   margin-top: 40px;
   margin-bottom: 20px;
 }
-#footer #container-footer-top #item-footer-right p {
-  color: #fff;
-}
-@media screen and (min-width: 950px) {
-  #footer #container-footer-top #item-footer-right p {
-    text-align: start;
-  }
-}
 #footer #container-footer-top #item-footer-right form#newsletter {
   display: flex;
   flex-wrap: wrap;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
   margin-bottom: 35px;
+}
+#footer #container-footer-top #item-footer-right form#newsletter label#label-mail-newsletter {
+  color: #fff;
 }
 #footer #container-footer-top #item-footer-right form#newsletter input {
   width: 250px;
@@ -1437,7 +1461,7 @@ section#section-news .text-shadow {
 }
 @media screen and (min-width: 950px) {
   #footer #container-footer-top #item-footer-right form#newsletter input#btn-submit-newsletter {
-    width: 110px;
+    width: 300px;
     height: 48px;
     margin-left: 10px;
     padding-right: 10px;
