--- a/css/style.scss
+++ b/css/style.scss
@@ -544,12 +544,10 @@ section#section-news {
       }
 
       a#btn-join-reader {
-        padding: 12px 24px;
+        padding: 12px 36px;
         font-weight: bold;
-        text-decoration: none;
         background: $btn-red;
         color: $white;
-        letter-spacing: 1px;
         border-radius: 8px;
         transition: all 0.35s;
 
@@ -1048,8 +1046,10 @@ section#section-news {
 
 #section-cta-available {
   width: 100%;
-  height: 400px;
-  padding: 80px;
+  height: fit-content;
+  padding-top: 80px;
+  padding-bottom: 80px;
+
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
   background-image: radial-gradient(
       circle at 19% 90%,
@@ -1113,18 +1113,39 @@ section#section-news {
   text-align: center;
 
   h2.title-cta {
-    font-size: 45px;
+    width: 90%;
+    margin: 0 auto;
+    font-size: 25px;
+    line-height: 35px;
     color: $white;
+
+    @media screen and (min-width: 650px) {
+      font-size: 35px;
+    }
+
+    @media screen and (min-width: 1270px) {
+      font-size: 50px;
+    }
   }
 
   p#sub-title-cta {
+    margin-top: 25px;
+    margin-bottom: 20px;
+    font-size: 14px;
+    font-weight: bold;
     color: $white;
+
+    @media screen and (min-width: 650px) {
+      margin-top: 35px;
+    margin-bottom: 25px;
+      font-size: 20px;
+    }
   }
 
   a {
     display: block;
     margin: 0 auto;
-    width: 250px;
+    width: 199px;
     padding: 12px 24px;
     background-color: $btn-red;
     color: $white;
@@ -1569,7 +1590,7 @@ section#section-news {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      align-items: baseline;
+      // align-items: baseline;
 
       @media screen and (min-width: 950px) {
         justify-content: flex-start;
@@ -1579,9 +1600,13 @@ section#section-news {
         display: flex;
         flex-wrap: wrap;
         align-items: center;
-        justify-content: flex-start;
+        justify-content: center;
         width: 100%;
         margin-left: -25px;
+
+        @media screen and (min-width: 950px) {
+          justify-content: flex-start;
+        }
 
         a.link-page-home {
           display: flex;
@@ -1655,21 +1680,18 @@ section#section-news {
       margin-top: 40px;
       margin-bottom: 20px;
 
-      p {
-        color: $white;
-
-        @media screen and (min-width: 950px) {
-          text-align: start;
-        }
-      }
-
       form#newsletter {
         display: flex;
         flex-wrap: wrap;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         text-align: center;
         margin-bottom: 35px;
+
+        label#label-mail-newsletter {
+          color: $white;     
+        }
 
         input {
           width: 250px;
@@ -1696,7 +1718,7 @@ section#section-news {
           transition: background-color 0.3s ease;
 
           @media screen and (min-width: 950px) {
-            width: 110px;
+            width: 300px;
             height: 48px;
             margin-left: 10px;
             padding-right: 10px;
