--- a/css/style.css
+++ b/css/style.css
@@ -1453,8 +1453,22 @@ section#section-news .text-shadow {
   text-align: center;
   margin-bottom: 35px;
 }
+@media screen and (min-width: 950px) {
+  #footer #container-footer-top #item-footer-right form#newsletter {
+    flex-direction: row;
+  }
+}
 #footer #container-footer-top #item-footer-right form#newsletter label#label-mail-newsletter {
   color: #fff;
+  display: block;
+  width: 100%;
+  text-align: center;
+}
+@media screen and (min-width: 950px) {
+  #footer #container-footer-top #item-footer-right form#newsletter label#label-mail-newsletter {
+    text-align: start;
+    padding-left: 80px;
+  }
 }
 #footer #container-footer-top #item-footer-right form#newsletter input {
   width: 250px;
@@ -1482,7 +1496,7 @@ section#section-news .text-shadow {
 }
 @media screen and (min-width: 950px) {
   #footer #container-footer-top #item-footer-right form#newsletter input#btn-submit-newsletter {
-    width: 300px;
+    width: 150px;
     height: 48px;
     margin-left: 10px;
     padding-right: 10px;
