--- a/css/style.scss
+++ b/css/style.scss
@@ -1697,8 +1697,20 @@ section#section-news {
         text-align: center;
         margin-bottom: 35px;
 
+        @media screen and (min-width: 950px) {
+          flex-direction: row;
+        }
+
         label#label-mail-newsletter {
-          color: $white;     
+          color: $white;
+          display: block;
+          width: 100%;
+          text-align: center;
+
+          @media screen and (min-width: 950px) {
+            text-align: start;
+            padding-left: 80px;
+          }
         }
 
         input {
@@ -1726,7 +1738,7 @@ section#section-news {
           transition: background-color 0.3s ease;
 
           @media screen and (min-width: 950px) {
-            width: 300px;
+            width: 150px;
             height: 48px;
             margin-left: 10px;
             padding-right: 10px;
