--- a/css/style.scss
+++ b/css/style.scss
@@ -1294,8 +1294,9 @@ section#section-news {
   }
 
   #container-section-zoom {
+    padding-top: 60px;
     width: 90%;
-    margin-top: 60px;
+    margin: 0 auto;
 
     div.pict-left,
     div.pict-right {
@@ -1399,7 +1400,14 @@ section#section-news {
 
 #section-faq {
   position: relative;
-  padding-top: 120px;
+  padding-top: 60px;
+  padding-bottom: 40px;
+  height: fit-content;
+
+  @media screen and (min-width: 950px) {
+    padding-top: 120px;
+  }
+  
 
   h2#section-title {
     margin-bottom: -10px;
@@ -1415,13 +1423,23 @@ section#section-news {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 60px;
+    margin-top: 40px;
+    width: 90%;
+    margin: 0 auto;
+
+    @media screen and (min-width: 950px) {
+      margin-top: 60px;
+    }
 
     hr {
-      width: 60%;
+      width: 80%;
       margin-top: 15px;
       margin-bottom: 5px;
       border: 1px solid lightgray;
+
+      @media screen and (min-width: 950px) {
+        width: 70%;
+      }
     }
 
     .item-faq {
@@ -1448,18 +1466,27 @@ section#section-news {
 
       p.question {
         margin: 12px 0 8px;
-        font-size: 20px;
+        font-size: 16px;
         font-weight: bold;
         margin-bottom: 5px;
         font-weight: bold;
         line-height: 24px;
+        width: 95%;
+
+        @media screen and (min-width: 950px) {
+          font-size: 20px;
+        }
       }
 
       p.faq-answer {
         display: none;
-        font-size: 18px;
+        font-size: 14px;
         opacity: 0;
         transition: opacity 0.5s ease;
+
+        @media screen and (min-width: 950px) {
+          font-size: 16px;
+        }
       }
 
       &.active {
