--- a/css/style.scss
+++ b/css/style.scss
@@ -1291,6 +1291,7 @@ section#section-news {
 
   @media screen and (min-width: 950px) {
     padding-top: 120px;
+    padding-bottom: 0;
   }
 
   #container-section-zoom {
@@ -1485,7 +1486,7 @@ section#section-news {
         transition: opacity 0.5s ease;
 
         @media screen and (min-width: 950px) {
-          font-size: 16px;
+          font-size: 18px;
         }
       }
 
@@ -1528,15 +1529,24 @@ section#section-news {
     h4 {
       font-style: normal;
       font-weight: 600;
-      font-size: 30px;
+      font-size: 25px;
       line-height: 30px;
+
+      @media screen and (min-width: 950px) {
+        font-size: 30px;
+      }
+
     }
 
     p {
       font-style: normal;
       font-weight: 400;
-      font-size: 22px;
+      font-size: 18px;
       line-height: 28px;
+
+      @media screen and (min-width: 950px) {
+        font-size: 22px;
+      }
     }
 
     a {
