--- a/css/style.scss
+++ b/css/style.scss
@@ -1116,7 +1116,7 @@ section#section-news {
 
     @media screen and (min-width: 650px) {
       margin-top: 35px;
-    margin-bottom: 25px;
+      margin-bottom: 25px;
       font-size: 20px;
     }
   }
@@ -1346,7 +1346,6 @@ section#section-news {
       }
 
       .item-pict-commun {
-
         @media screen and (min-width: 1150px) {
           width: 49%;
         }
@@ -1376,7 +1375,6 @@ section#section-news {
       }
 
       .item-pict-commun {
-
         @media screen and (min-width: 1150px) {
           width: 40%;
         }
@@ -1408,7 +1406,6 @@ section#section-news {
   @media screen and (min-width: 950px) {
     padding-top: 120px;
   }
-  
 
   h2#section-title {
     margin-bottom: -10px;
@@ -1535,7 +1532,6 @@ section#section-news {
       @media screen and (min-width: 950px) {
         font-size: 30px;
       }
-
     }
 
     p {
@@ -1569,42 +1565,55 @@ section#section-news {
 
 #section-location {
   position: relative;
-  padding-top: 80px;
+  padding-top: 0px;
   padding-bottom: 180px;
+  height: fit-content;
 
-  h2#title-location {
-    margin-top: -30px;
+  @media screen and (min-width: 950px) {
+    padding-top: 80px;
   }
 
-  #iframe-google {
-    position: absolute;
-    top: 595px;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
+  div#iframe-google {
+    width: 90%;
+    margin: 30px auto;
 
-  #container-info-location {
-    max-width: 1200px;
-    height: 250px;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: center;
-    margin-top: 530px;
-    border-radius: 0 0 8px 8px;
-    background-color: $white;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
-      rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+    iframe {
+      width: 100%;
+      max-width: 1200px;
+      height: 450px;
+    }
 
-    ul {
-      li {
-        font-size: 18px;
-        margin: 10px 0;
-
-        span {
-          font-weight: bold;
-          color: $main-blue;
+    #container-info-location {
+      width: 100%;
+      max-width: 1200px;
+      height: fit-content;
+      padding: 30px;
+      margin: -10px 0 auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: baseline;
+      border-radius: 0 0 8px 8px;
+      background-color: $white;
+      box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
+        rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+  
+      @media screen and (min-width: 650px) {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+  
+      ul {
+        margin : 20px 50px;
+        li {
+          font-size: 18px;
+          margin: 10px 0;
+  
+          span {
+            font-weight: bold;
+            color: $main-blue;
+          }
         }
       }
     }
