--- a/css/style.scss
+++ b/css/style.scss
@@ -43,11 +43,6 @@ body {
   }
 }
 
-body.no-scroll {
-  margin-right: 17px;
-  overflow: hidden;
-}
-
 ul {
   list-style-type: none;
 }
@@ -798,39 +793,39 @@ section#section-news {
       top: 0;
 
       @media screen and (min-width: 950px) {
-        left: -120px;
-        top: 100px;
-        margin-right: -100px;
       }
+      left: -120px;
+      top: 100px;
+      margin-right: -100px;
+    }
 
-      img {
-        position: absolute;
-        top: 0px;
-        transform-origin: bottom left;
-        transform: rotate(-5deg);
-        width: 200px;
-        height: 300px;
-        margin-left: -10px;
-      }
+    img {
+      position: absolute;
+      top: 0px;
+      transform-origin: bottom left;
+      transform: rotate(-5deg);
+      width: 200px;
+      height: 300px;
+      margin-left: -10px;
     }
   }
+}
 
-  li:nth-child(2) {
-    a {
-      color: #28e2d9;
-    }
+li:nth-child(2) {
+  a {
+    color: #28e2d9;
   }
+}
 
-  li:nth-child(3) {
-    a {
-      color: #ffd317;
-    }
+li:nth-child(3) {
+  a {
+    color: #ffd317;
   }
+}
 
-  li:nth-child(4) {
-    a {
-      color: #0b95fa;
-    }
+li:nth-child(4) {
+  a {
+    color: #0b95fa;
   }
 }
 
@@ -859,10 +854,9 @@ section#section-news {
 // ---------- SECTION - lAST ARRIVAL ----------
 
 #section-soon-available {
-  width: 90%;
+  width: 100%;
   padding-top: 120px;
   padding-bottom: 120px;
-  margin: 0 auto;
 
   #h3-tag {
     width: fit-content;
@@ -883,21 +877,24 @@ section#section-news {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    margin-top: 30px;
 
     .card {
       position: relative;
-      max-width: 450px;
-      min-width: 450px;
-      width: 33%;
-      margin: 100px auto 40px auto;
+      width: 280px;
+      margin: 260px 20px -50px 20px;
       height: 230px;
-      padding: 15px 5px 15px 200px;
       border-radius: 8px;
-      background-color: $background;
-      box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+      background-color: transparent;
       opacity: 0;
-      transform: translateY(100%);
+
+      @media screen and (min-width: 500px) {
+        width: 450px;
+        margin: 100px auto 40px auto;
+        padding: 15px 5px 15px 200px;
+        background-color: $background;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        transform: translateY(100%);
+      }
 
       &:hover img.pict-card-book {
         transform: translateY(-15px);
@@ -954,20 +951,27 @@ section#section-news {
 
     img.pict-card-book {
       position: absolute;
-      top: -40px;
-      left: 25px;
+      top: -120px;
+      left: 50%;
+      transform: translate(-50%,-50%);
       width: 150px;
       height: 230px;
       object-fit: cover;
       box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
       transition: all 0.5s ease;
 
+      @media screen and (min-width: 500px) {
+        top: -40px;
+        left: 25px;
+        transform: none;
+      }
+
       &:hover {
         transform: translateY(-15px);
       }
     }
 
-    .bottom-item-card {
+    div.bottom-item-card {
       h4#title-genre {
         font-size: 16px;
         margin: 15px 0;
@@ -992,13 +996,17 @@ section#section-news {
       }
 
       a.link-page {
-        position: absolute;
-        right: 10px;
-        bottom: 15px;
+        margin-top: 25px;
         font-size: 16px;
         color: $main-blue;
         margin-right: 10px;
         margin-top: 20px;
+
+        @media screen and (min-width: 500px) {
+          position: absolute;
+          right: 10px;
+          bottom: 15px;
+        }
 
         &:hover {
           color: $footer;
@@ -1597,19 +1605,19 @@ section#section-news {
       background-color: $white;
       box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
         rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
-  
+
       @media screen and (min-width: 650px) {
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
       }
-  
+
       ul {
-        margin : 20px 50px;
+        margin: 20px 50px;
         li {
           font-size: 18px;
           margin: 10px 0;
-  
+
           span {
             font-weight: bold;
             color: $main-blue;
