--- a/css/style.css
+++ b/css/style.css
@@ -782,17 +782,23 @@ li:nth-child(4) a {
 }
 #section-soon-available #container-cards .card {
   position: relative;
-  width: 280px;
-  margin: 260px 20px -50px 20px;
-  height: 230px;
+  width: 100%;
+  max-width: 350px;
+  margin: 320px auto -50px auto;
+  padding: 15px;
+  min-height: 180px;
+  height: -moz-fit-content;
+  height: fit-content;
   border-radius: 8px;
-  background-color: transparent;
+  background-color: #fff;
   opacity: 0;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 @media screen and (min-width: 500px) {
   #section-soon-available #container-cards .card {
-    width: 450px;
-    margin: 100px auto 40px auto;
+    max-width: 450px;
+    height: 230px;
+    margin: 100px 10px 40px 10px;
     padding: 15px 5px 15px 200px;
     background-color: #fafafb;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -843,7 +849,7 @@ li:nth-child(4) a {
 }
 #section-soon-available #container-cards img.pict-card-book {
   position: absolute;
-  top: -120px;
+  top: -100px;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 150px;
@@ -884,7 +890,9 @@ li:nth-child(4) a {
   text-transform: capitalize;
 }
 #section-soon-available #container-cards div.bottom-item-card a.link-page {
-  margin-top: 25px;
+  position: absolute;
+  bottom: 5px;
+  right: 15px;
   font-size: 16px;
   color: #0868ae;
   margin-right: 10px;
