--- a/css/style.css
+++ b/css/style.css
@@ -723,15 +723,15 @@ section#section-news .text-shadow {
 }
 
 li:nth-child(2) a {
-  color: #28e2d9;
+  color: #0868ae;
 }
 
 li:nth-child(3) a {
-  color: #ffd317;
+  color: #0868ae;
 }
 
 li:nth-child(4) a {
-  color: #0b95fa;
+  color: #0868ae;
 }
 
 #btn-show-heart {
