--- a/css/style.scss
+++ b/css/style.scss
@@ -813,19 +813,19 @@ section#section-news {
 
 li:nth-child(2) {
   a {
-    color: #28e2d9;
+    color: $main-blue;
   }
 }
 
 li:nth-child(3) {
   a {
-    color: #ffd317;
+    color: $main-blue;
   }
 }
 
 li:nth-child(4) {
   a {
-    color: #0b95fa;
+    color: $main-blue;
   }
 }
 
