--- a/css/style-book-detail.scss
+++ b/css/style-book-detail.scss
@@ -132,7 +132,7 @@ section#section-detail-book {
         font-size: 20px;
         text-align: inherit;
         @media screen and (min-width: 950px) {
-          width: 90%;
+          width: 100%;
           line-height: 32px;
           margin-bottom: 6px;
           font-size: 28px;
@@ -159,6 +159,8 @@ section#section-detail-book {
         margin: 0 auto 40px;
         display: block;
         background-color: gray;
+        width: 280px;
+        height: auto;
       }
 
       h2#title-extract {
